<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [
    <!ENTITY appName "Stolen Vehicle Detector">
    <!ENTITY appId "">
    <!ENTITY appVersion "v0.7">
    <!ENTITY appDate "03/07/2020">
    <!ENTITY appCreator "Arpad Fodor">
    <!ENTITY adMobAppId "ca-app-pub-3940256099942544~3347511713">
    <!ENTITY adMobBannerId "ca-app-pub-3940256099942544/6300978111">
    <!--test adMobAppId "ca-app-pub-3940256099942544~3347511713"-->
    <!--test adMobBannerId "ca-app-pub-3940256099942544/6300978111"-->
    ]>

<resources>

    <string name="app_name">&appName;</string>
    <string name="app_id">&appId;</string>
    <string name="app_version">&appVersion;</string>
    <string name="app_date">&appDate;</string>
    <string name="app_ad_id">&adMobAppId;</string>
    <string name="app_banner_id">&adMobBannerId;</string>
    <string name="app_creator">Created by &appCreator;</string>
    <string name="developer_page">https://github.com/arpadfodor</string>

    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>

    <string name="switch_camera">Switch camera</string>
    <string name="capture">Capture</string>
    <string name="gallery">Gallery</string>
    <string name="load_image">Load image</string>
    <string name="report">Report</string>
    <string name="details">Details</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="share_hint">Share using</string>

    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>

    <string name="loaded_image_description">The loaded image</string>
    <string name="ivBoundingBoxes_description">Image to draw the bounding boxes on</string>

    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>

    <string name="delete_title">Confirm delete</string>
    <string name="delete_dialog">Are you sure you want to delete current photo?</string>
    <string name="delete">Delete</string>

    <string name="exit_title">Confirm exit</string>
    <string name="exit_dialog">Are you sure you want to exit?</string>

    <string name="menu_open">Open navigation menu</string>
    <string name="menu_close">Close navigation menu</string>
    <string name="menu_live">Live</string>
    <string name="menu_load">Load</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_settings">Settings</string>

    <string name="alert_subtitle">Pending alerts</string>

    <string name="about">About</string>
    <string name="further">Further apps from the developer</string>
    <string name="detector_settings">Detection settings</string>
    <string name="sync_settings">Sync settings</string>
    <string name="setting_num_recognitions">Recognitions per image</string>
    <string name="setting_summary_num_recognitions">The maximum number of recognitions that appear at the same time.</string>
    <string name="setting_min_certainty">Minimum certainty %</string>
    <string name="setting_summary_min_certainty">Only recognitions with greater or equal certainty than the selected percentage are displayed.</string>
    <string name="setting_receptive_field">Show receptive field on camera image</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="force_update_db">Sync now</string>
    <string name="updated_database">Database updated</string>
    <string name="updating_failed">Updating failed</string>
    <string name="force_update_db_summary">Internet connection is required to update the database.</string>
    <string name="setting_auto_sync">Enable Auto Sync</string>
    <string name="last_synced">Last Synced</string>
    <string name="auto_sync_interval_summary">Select how often the app should update.</string>
    <string name="send_alert">Send alert</string>

</resources>
