<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.AppBarOverlay">

    <PreferenceCategory
        android:title="@string/detector_settings">

        <SeekBarPreference
            app:key="@string/SETTINGS_MAXIMUM_RECOGNITIONS"
            android:title="@string/setting_max_recognition"
            android:summary="@string/setting_summary_max_recognition"
            android:enabled="true"
            android:selectable="true"
            app:showSeekBarValue="true"
            android:max="@integer/settings_maximum_recognitions_max"
            app:min="@integer/settings_maximum_recognitions_min"
            android:defaultValue="@integer/settings_maximum_recognitions_default"/>

        <SeekBarPreference
            app:key="@string/SETTINGS_MINIMUM_PREDICTION_CERTAINTY"
            android:title="@string/setting_min_certainty"
            android:summary="@string/setting_summary_min_certainty"
            android:enabled="true"
            android:selectable="true"
            app:showSeekBarValue="true"
            android:max="@integer/settings_minimum_prediction_certainty_max"
            app:min="@integer/settings_minimum_prediction_certainty_min"
            android:defaultValue="@integer/settings_minimum_prediction_certainty_default"/>

        <SwitchPreference
            app:key="@string/SETTINGS_SHOW_RECEPTIVE_FIELD"
            android:title="@string/setting_receptive_field"
            android:summaryOn="@string/enabled"
            android:summaryOff="@string/disabled"
            android:enabled="true"
            android:selectable="true"
            android:defaultValue="@bool/settings_receptive_field_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:title="@string/app_name"
            android:summary="@string/app_version" />

        <Preference
            android:title="@string/app_creator"
            android:summary="@string/app_date" />

        <Preference android:title="@string/further">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/developer_page" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
