<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_live"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_live" />

    <item
        android:id="@+id/navigation_load"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_load" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_gallery" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_reports" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_settings" />

</menu>
